# game_of_life

./: README.md
game_of_life/: CMakeLists.txt  CMakePresets.json  SDL_wrappler.cpp  SDL_wrappler.h  core.cpp  core.h  main.cpp  user_interface.cpp  user_interface.h
